--- a/config.toml
+++ b/config.toml
@@ -587,8 +587,8 @@ uglyURLs = false
 
     ## Utterances
     enableUtterances = true
-    utterancesRepo = "tmliang/tmliang.github.io"
-    utterancesIssueTerm = "pathname"
+    utterancesRepo = "tmliang/blog_comments"
+    utterancesIssueTerm = "url"
     utterancesTheme = "github-light"
     utterancesThemeDark = "photon-dark"
     utterancesLabel = ""
